--- a/index.html
+++ b/index.html
@@ -303,6 +303,8 @@ Error message and password prompt
 
 <li>Dinraal, the Fire Dragon</li>
 
+<li>Draft of '斩铁大剑'</li>
+
 <li>Farosh, the Lightning Dragon</li>
 
 <li>Ganos Shrine</li>
@@ -363,15 +365,25 @@ Error message and password prompt
 
 <li>Untitled</li>
 
+<li>七宝刀</li>
+
+<li>七宝刀+高攻素材</li>
+
 <li>互动地图</li>
 
 <li>余料</li>
 
 <li>光线头</li>
 
+<li>光鳞之枪</li>
+
+<li>光鳞之枪+冰属性素材</li>
+
 <li>冰龙头</li>
 
 <li>冷冻果</li>
+
+<li>卓拉武器</li>
 
 <li>地点</li>
 
@@ -391,11 +403,19 @@ Error message and password prompt
 
 <li>建筑材料</li>
 
+<li>戒心小刀</li>
+
+<li>戒心小刀+人马刃角</li>
+
 <li>戒心武器</li>
 
 <li>戒心长刀</li>
 
 <li>戒心长刀+属性材料</li>
+
+<li>斩铁大剑+高攻素材</li>
+
+<li>格鲁德武器</li>
 
 <li>武器</li>
 
@@ -404,6 +424,10 @@ Error message and password prompt
 <li>沃托里村</li>
 
 <li>火箭</li>
+
+<li>王族武器</li>
+
+<li>王族武器+人马刃角</li>
 
 <li>生物</li>
 
@@ -506,7 +530,7 @@ Error message and password prompt
 {"created":"20230525134344064","title":"$:/state/toc/TableOfContents/Database-素材--118161433","text":"close","modified":"20230525134347914"},
 {"created":"20230525134338184","title":"$:/state/toc/TableOfContents/Database-防具--118161433","text":"close","modified":"20230525134348740"},
 {"title":"$:/status/RequireReloadDueToPluginChange","text":"no"},
-{"title":"$:/StoryList","created":"20230525163805325","text":"","list":"武器 戒心长刀 戒心武器 戒心长刀+属性材料 生物 蜥蜴战士 Home todo","modified":"20230525164056581"},
+{"title":"$:/StoryList","created":"20230525163805325","text":"","list":"卓拉武器 武器余料建造 光鳞之枪+冰属性素材 光鳞之枪 七宝刀+高攻素材 七宝刀 格鲁德武器 斩铁大剑+高攻素材 [[Draft of '斩铁大剑']] 粗粗的棒子+大刺球 武器 戒心长刀 戒心武器 戒心长刀+属性材料 生物 蜥蜴战士 Home todo","modified":"20230525165620880"},
 {"created":"20230520081651938","title":"$:/tags/PageControls","list":"$:/core/ui/Buttons/home $:/core/ui/Buttons/close-all $:/core/ui/Buttons/fold-all $:/core/ui/Buttons/unfold-all $:/core/ui/Buttons/permaview $:/core/ui/Buttons/new-tiddler $:/core/ui/Buttons/new-journal $:/core/ui/Buttons/new-image $:/core/ui/Buttons/import $:/core/ui/Buttons/export-page $:/core/ui/Buttons/tag-manager $:/core/ui/Buttons/control-panel $:/core/ui/Buttons/advanced-search $:/core/ui/Buttons/manager $:/core/ui/Buttons/language $:/core/ui/Buttons/palette $:/core/ui/Buttons/theme $:/core/ui/Buttons/layout $:/core/ui/Buttons/storyview $:/core/ui/Buttons/encryption $:/core/ui/Buttons/timestamp $:/core/ui/Buttons/full-screen $:/core/ui/Buttons/print $:/core/ui/Buttons/save-wiki $:/core/ui/Buttons/refresh $:/core/ui/Buttons/more-page-actions","modified":"20230520081651938"},
 {"created":"20230525101749373","text":"","title":"$:/tags/ViewTemplateBodyFilter","list":"$:/config/ViewTemplateBodyFilters/hide-body $:/config/ViewTemplateBodyFilters/code-body $:/config/ViewTemplateBodyFilters/stylesheet $:/config/ViewTemplateBodyFilters/system $:/config/ViewTemplateBodyFilters/import $:/config/ViewTemplateBodyFilters/plugin $:/config/ViewTemplateBodyFilters/backlinks $:/config/ViewTemplateBodyFilters/default","modified":"20230525101753748"},
 {"created":"20230520071000269","text":"\u003C\u003Clist-links \"[tag{!!title}sort[title]]\">>\n\n\u003C\u003C.newButton>>","tags":"Template","title":"$:/template/Database","modified":"20230520103522228"},
@@ -527,6 +551,7 @@ Error message and password prompt
 {"created":"20230521031045423","text":"* [[IGN|https://www.ign.com/wikis/the-legend-of-zelda-tears-of-the-kingdom/Armor_Sets_and_Locations]]","tags":"Resource","modified":"20230521031324866","title":"Armor Sets"},
 {"created":"20230520105716761","text":"\u003C\u003C.children>>\n\n\u003C\u003C.newButton>>","title":"Database","modified":"20230525134300122","tags":"TableOfContents","caption":"数据库"},
 {"created":"20230520113323960","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[生物]]\n\n!! 出发点\n\n\u003C\u003Clist-links \"[all[current]backlinks[]] +[tag[地点]]\">>\n","tags":"生物","modified":"20230520115251510","title":"Dinraal, the Fire Dragon"},
+{"created":"20230525165610233","text":"","title":"Draft of '斩铁大剑'","draft.title":"斩铁大剑","draft.of":"斩铁大剑","modified":"20230525165610233","tags":"英杰武器"},
 {"created":"20230520112110771","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[生物]]\n\n!! 出发点\n\n\u003C\u003Clist-links \"[all[current]backlinks[]] +[tag[地点]]\">>\n","tags":"生物","modified":"20230520115306859","title":"Farosh, the Lightning Dragon"},
 {"created":"20230520105317130","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[地点]]\n\n\u003C\u003C.figma \"https://www.figma.com/file/wsk1tyIypyKVh1JRevscio/Zelda---Tears-of-the-Kingdom?type=design&node-id=86%3A1287&t=LuzplSZ3PNxXULtL-1\" >>\n\n!! POI\n\n# [[4风扇飞行器]]\n\n","tags":"地点 Shrine Sky","modified":"20230525151604886","title":"Ganos Shrine"},
 {"created":"20230520062305709","text":"!! 数据库\n\n{{Database}}\n\n!! 资源\n\n{{Resource}}","tags":"Nav","title":"Home","modified":"20230525160146749"},
@@ -557,11 +582,16 @@ Error message and password prompt
 {"created":"20230524155715154","text":"https://youtu.be/aXMFXs86oB8","tags":"todo","title":"Top 10 盾牌","modified":"20230524155742597"},
 {"created":"20230522133214258","text":"https://youtu.be/IQAYPiYB580","tags":"todo","title":"Top 10 近战武器","modified":"20230524155216159"},
 {"title":"Untitled","text":"蛮族套装升级材料"},
+{"created":"20230525165534053","text":"","title":"七宝刀","modified":"20230525165543369","tags":"格鲁德武器 英杰武器"},
+{"created":"20230525165304824","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[武器余料建造]]\n\n[[七宝刀]] + 高攻素材","tags":"武器余料建造","modified":"20230525165405361","title":"七宝刀+高攻素材"},
 {"created":"20230520062551727","text":"* [[zeldamaps.com|https://zeldamaps.com/?game=TotK]] Free Markers\n* [[IGN|https://www.ign.com/maps/the-legend-of-zelda-tears-of-the-kingdom/hyrule]] Better search","tags":"Resource","title":"互动地图","modified":"20230521031309283"},
 {"created":"20230525161718859","text":"\u003C\u003Clist-links \"[tag{!!title}sort[title]]\">>\n\n\u003C\u003C.newButton>>","tags":"Database","title":"余料","modified":"20230525161727472"},
 {"created":"20230520063912950","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[建筑材料]]\n\n!! 进货点\n\n\u003C\u003Clist-links \"[all[current]backlinks[]] +[tag[地点]]\">>\n","tags":"建筑材料","title":"光线头","modified":"20230520110156247"},
+{"created":"20230525165631228","text":"","title":"光鳞之枪","modified":"20230525165643926","tags":"英杰武器 卓拉武器"},
+{"created":"20230525165329259","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[武器余料建造]]\n\n[[光鳞之枪]] + 冰属性素材比如 [[蜥蜴战士]]","tags":"武器余料建造","modified":"20230525165427492","title":"光鳞之枪+冰属性素材"},
 {"created":"20230520063601215","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[建筑材料]]\n\n!! 进货点\n\n\u003C\u003Clist-links \"[all[current]backlinks[]] +[tag[地点]]\">>\n","tags":"建筑材料","title":"冰龙头","modified":"20230520110307600"},
 {"created":"20230520064818433","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[素材]]\n\n!! 进货点\n\n\u003C\u003Clist-links \"[all[current]backlinks[]] +[tag[地点]]\">>","tags":"素材","title":"冷冻果","modified":"20230520110405869"},
+{"created":"20230525164716484","text":"湿身威力增加","tags":"","title":"卓拉武器","modified":"20230525165654013"},
 {"created":"20230520064224697","text":"\u003C\u003C.children>>\n\n\u003C\u003C.newButton>>","tags":"Database","title":"地点","modified":"20230520104729787"},
 {"created":"20230525161728444","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[余料]]\n\n!! 进货点\n\n\u003C\u003Clist-links \"[all[current]backlinks[]] +[tag[地点]]\">>\n","tags":"余料","modified":"20230525161823382","title":"大刺球"},
 {"created":"20230522062746382","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[素材]]\n\n!! 进货点\n\n\u003C\u003Clist-links \"[all[current]backlinks[]] +[tag[地点]]\">>\n","tags":"素材","modified":"20230522062816849","title":"大剑草"},
@@ -571,16 +601,22 @@ Error message and password prompt
 {"created":"20230525163940477","text":"\u003C\u003C.children>>","title":"属性材料","modified":"20230525163950129"},
 {"created":"20230521033751771","text":"\u003C\u003C.icon $:/core/images/globe>> [[常去的进货地点 (NGA)|https://ngabbs.com/read.php?tid=36332945]]","modified":"20230522062954811","title":"常去的进货地点 (NGA)","tags":"External"},
 {"created":"20230520063031151","text":"\u003C\u003C.children>>\n\n\u003C\u003C.newButton>>","tags":"Database","title":"建筑材料","modified":"20230520104325426"},
+{"created":"20230525164305332","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[武器]]\n\n!! 进货点\n\n\u003C\u003Clist-links \"[all[current]backlinks[]] +[tag[地点]]\">>\n","tags":"武器 戒心武器","modified":"20230525164313955","title":"戒心小刀"},
+{"created":"20230525164319304","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[武器余料建造]]\n\n[[戒心小刀]] + [[Lynel]] 刃角","tags":"武器余料建造","modified":"20230525164348813","title":"戒心小刀+人马刃角"},
 {"created":"20230525164100875","text":"偷袭威力增加\n\n\u003C\u003C.children>>","title":"戒心武器","modified":"20230525164130196"},
 {"created":"20230525164036921","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[武器]]\n\n!! 进货点\n\n\u003C\u003Clist-links \"[all[current]backlinks[]] +[tag[地点]]\">>\n","tags":"武器 戒心武器","modified":"20230525164054590","title":"戒心长刀"},
 {"created":"20230525163656332","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[武器余料建造]]\n\n[[戒心长刀]] + {{属性材料||$:/core/ui/TagTemplate}}","tags":"武器余料建造","modified":"20230525164015821","title":"戒心长刀+属性材料"},
+{"created":"20230525164850919","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[武器余料建造]]\n\n[[斩铁大剑]] + 高攻素材\n\n钝器伤害","tags":"武器余料建造","modified":"20230525165228990","title":"斩铁大剑+高攻素材"},
+{"created":"20230525165551136","text":"材料攻击 x2","title":"格鲁德武器","modified":"20230525165558529"},
 {"created":"20230525160635718","text":"\u003C\u003Clist-links \"[tag{!!title}sort[title]]\">>\n\n\u003C\u003C.newButton>>","tags":"Database","title":"武器","modified":"20230525160647314"},
 {"created":"20230525160233560","text":"\u003C\u003Clist-links \"[tag{!!title}sort[title]]\">>\n\n\u003C\u003C.newButton>>","tags":"Database","title":"武器余料建造","modified":"20230525160257892"},
 {"created":"20230522062237825","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[地点]]\n\n传送点 [[Sifumim Shrine]]\n\n免费住宿、料理和宝箱\n\n!! POI","tags":"地点 Village Surface","modified":"20230522062454698","title":"沃托里村"},
 {"created":"20230521033934870","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[建筑材料]]\n\n!! 进货点\n\n\u003C\u003Clist-links \"[all[current]backlinks[]] +[tag[地点]]\">>\n","tags":"建筑材料","modified":"20230521033940257","title":"火箭"},
+{"created":"20230525164702196","text":"回避威力增加","title":"王族武器","modified":"20230525164713349"},
+{"created":"20230525164630006","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[武器余料建造]]\n\n[[王族武器]] + [[Lynel]] 刃角","tags":"武器余料建造","modified":"20230525164656740","title":"王族武器+人马刃角"},
 {"created":"20230520110441315","text":"\u003C\u003Clist-links \"[tag{!!title}sort[title]]\">>\n\n\u003C\u003C.newButton>>","tags":"Database","title":"生物","modified":"20230520110450553"},
 {"created":"20230525160707857","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[武器]]\n\n砍树\n","tags":"武器","modified":"20230525161918418","title":"粗粗的棒子"},
-{"created":"20230525160411058","text":"[[粗粗的棒子]]+[[大刺球]]","tags":"武器余料建造","modified":"20230525162316709","title":"粗粗的棒子+大刺球"},
+{"created":"20230525160411058","text":"[[粗粗的棒子]] + [[大刺球]]\n\n","tags":"武器余料建造","modified":"20230525165119224","title":"粗粗的棒子+大刺球"},
 {"created":"20230520110332837","text":"\u003C\u003Clist-links \"[tag{!!title}sort[title]]\">>\n\n\u003C\u003C.newButton>>","tags":"Database","title":"素材","modified":"20230520110341726"},
 {"created":"20230525093112075","text":"* 蛮族套装：蛮族头盔、蛮族服、蛮族短裤\n* 防具属性：攻击提升 {{攻击||$:/core/ui/TagTemplate}}\n* 套装奖励：蓄力攻击精力持久 {{蓄力||$:/core/ui/TagTemplate}}\n\n!! 升级材料\n\n* 防 御 力：3（初始）→5（一星）→ 8（二星）→12（三星）→ 20（四星）\n* 一星：[[大剑草]]×3\n* 二星：[[莱尼尔|Lynel]]的刃角×2、[[莱尼尔|Lynel]]的碎角×2、[[大剑蘑菇]]x5\n* 三星：蓝鬃莱尼尔的刃角×3、蓝鬃莱尼尔的碎角×3、大剑螃蟹x3\n* 四星：白鬃莱尼尔的刃角×3、白鬃莱尼尔的碎角×3、大剑独角仙x3","tags":"防具 攻击 蓄力 todo","modified":"20230525163538128","title":"蛮族套装"},
 {"created":"20230524161043613","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[素材]]\n\nhttps://youtu.be/pYhlf4w4nRc\n\n!! 进货点\n\n\u003C\u003Clist-links \"[all[current]backlinks[]] +[tag[地点]]\">>\n","tags":"素材","modified":"20230524161123927","title":"蜂蜜"},
