--- a/index.html
+++ b/index.html
@@ -309,6 +309,8 @@ Error message and password prompt
 
 <li>Database</li>
 
+<li>Death Mountain</li>
+
 <li>Depths</li>
 
 <li>Dinraal, the Fire Dragon</li>
@@ -417,8 +419,6 @@ Error message and password prompt
 
 <li>卡卡利科村</li>
 
-<li>卢比</li>
-
 <li>地底武器刷新</li>
 
 <li>地点</li>
@@ -483,6 +483,8 @@ Error message and password prompt
 
 <li>电鱼</li>
 
+<li>章鱼哥</li>
+
 <li>粗粗的棒子</li>
 
 <li>粗粗的棒子+大刺球</li>
@@ -500,6 +502,10 @@ Error message and password prompt
 <li>蜥蜴战士</li>
 
 <li>血月路线</li>
+
+<li>装备维修</li>
+
+<li>装备附魔</li>
 
 <li>近卫大剑</li>
 
@@ -579,19 +585,19 @@ Error message and password prompt
 {"created":"20230522233357380","title":"$:/state/tab-267361470","text":"$:/core/ui/TiddlerInfo/References","modified":"20230522234236610"},
 {"created":"20230521034021098","title":"$:/state/tab-99014043","text":"$:/core/ui/ControlPanel/ViewTemplateBody","modified":"20230525101506932"},
 {"created":"20230520062749396","title":"$:/state/tab/moresidebar-1850697562","text":"$:/core/ui/MoreSideBar/System","modified":"20230525161748363"},
-{"created":"20230520054626033","title":"$:/state/tab/sidebar--595412856","text":"TableOfContents","modified":"20230526144802073"},
+{"created":"20230520054626033","title":"$:/state/tab/sidebar--595412856","text":"$:/core/ui/SideBar/More","modified":"20230526143200601"},
 {"created":"20230520081558315","title":"$:/state/tabs/controlpanel/toolbars-1345989671","text":"$:/core/ui/ControlPanel/Toolbars/EditToolbar","modified":"20230522234039916"},
-{"created":"20230525134302402","title":"$:/state/toc/TableOfContents-Database--118161433","text":"open","modified":"20230526144826160"},
+{"created":"20230525134302402","title":"$:/state/toc/TableOfContents-Database--118161433","text":"close","modified":"20230526143037818"},
 {"created":"20230525134337246","title":"$:/state/toc/TableOfContents-Resource--118161433","text":"close","modified":"20230526075924285"},
-{"created":"20230525134352827","title":"$:/state/toc/TableOfContents/Database-地点--118161433","text":"open","modified":"20230526145007696"},
-{"created":"20230525134349626","title":"$:/state/toc/TableOfContents/Database-建筑材料--118161433","text":"open","modified":"20230526145006163"},
+{"created":"20230525134352827","title":"$:/state/toc/TableOfContents/Database-地点--118161433","text":"close","modified":"20230526142320658"},
+{"created":"20230525134349626","title":"$:/state/toc/TableOfContents/Database-建筑材料--118161433","text":"close","modified":"20230525134352244"},
 {"created":"20230525172350923","title":"$:/state/toc/TableOfContents/Database-武器--118161433","text":"close","modified":"20230525172448420"},
 {"created":"20230525163907396","title":"$:/state/toc/TableOfContents/Database-武器余料建造--118161433","text":"close","modified":"20230525171607729"},
 {"created":"20230525134345720","title":"$:/state/toc/TableOfContents/Database-生物--118161433","text":"close","modified":"20230526143034541"},
 {"created":"20230525134344064","title":"$:/state/toc/TableOfContents/Database-素材--118161433","text":"close","modified":"20230526143035438"},
 {"created":"20230525134338184","title":"$:/state/toc/TableOfContents/Database-防具--118161433","text":"close","modified":"20230525134348740"},
 {"title":"$:/status/RequireReloadDueToPluginChange","text":"no"},
-{"created":"20230526144812872","title":"$:/StoryList","text":"","list":"[[Usazum Shrine]] 苹果园 [[Sonapan Shrine]] 素材 卢比 Home 卓拉领地 血月路线","modified":"20230526145047219"},
+{"title":"$:/StoryList","text":"","list":"Home 血月路线"},
 {"created":"20230520081651938","title":"$:/tags/PageControls","list":"$:/core/ui/Buttons/home $:/core/ui/Buttons/close-all $:/core/ui/Buttons/fold-all $:/core/ui/Buttons/unfold-all $:/core/ui/Buttons/permaview $:/core/ui/Buttons/new-tiddler $:/core/ui/Buttons/new-journal $:/core/ui/Buttons/new-image $:/core/ui/Buttons/import $:/core/ui/Buttons/export-page $:/core/ui/Buttons/tag-manager $:/core/ui/Buttons/control-panel $:/core/ui/Buttons/advanced-search $:/core/ui/Buttons/manager $:/core/ui/Buttons/language $:/core/ui/Buttons/palette $:/core/ui/Buttons/theme $:/core/ui/Buttons/layout $:/core/ui/Buttons/storyview $:/core/ui/Buttons/encryption $:/core/ui/Buttons/timestamp $:/core/ui/Buttons/full-screen $:/core/ui/Buttons/print $:/core/ui/Buttons/save-wiki $:/core/ui/Buttons/refresh $:/core/ui/Buttons/more-page-actions","modified":"20230520081651938"},
 {"created":"20230525101749373","text":"","title":"$:/tags/ViewTemplateBodyFilter","list":"$:/config/ViewTemplateBodyFilters/hide-body $:/config/ViewTemplateBodyFilters/code-body $:/config/ViewTemplateBodyFilters/stylesheet $:/config/ViewTemplateBodyFilters/system $:/config/ViewTemplateBodyFilters/import $:/config/ViewTemplateBodyFilters/plugin $:/config/ViewTemplateBodyFilters/backlinks $:/config/ViewTemplateBodyFilters/default","modified":"20230525101753748"},
 {"created":"20230520071000269","text":"\u003C\u003Clist-links \"[tag{!!title}sort[title]]\">>\n\n\u003C\u003C.newButton>>","tags":"Template","title":"$:/template/Database","modified":"20230520103522228"},
@@ -614,6 +620,7 @@ Error message and password prompt
 {"created":"20230520063928635","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[建筑材料]]\n\n!! 进货点\n\n\u003C\u003Clist-links \"[all[current]backlinks[]] +[tag[地点]]\">>\n","tags":"建筑材料 成品","title":"4风扇飞行器","modified":"20230520110256108"},
 {"created":"20230526075529114","text":"[[Mount Lanayru Skyview Tower]]\n\n\u003C\u003C.figma \"https://www.figma.com/file/wsk1tyIypyKVh1JRevscio/Zelda---Tears-of-the-Kingdom?type=design&node-id=150%3A485&t=pZEAVpr6lI3O8rqX-1\">>","title":"Blue-Maned Lynel 路线","modified":"20230526075841723"},
 {"created":"20230520105716761","text":"\u003C\u003C.children>>\n\n\u003C\u003C.newButton>>","title":"Database","modified":"20230525134300122","tags":"TableOfContents","caption":"数据库"},
+{"created":"20230526145913739","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[地点]]\n\n\u003C\u003C.figma \"https://www.figma.com/file/wsk1tyIypyKVh1JRevscio/Zelda---Tears-of-the-Kingdom?type=design&node-id=188%3A511&t=VOKHRc7wXbI0zdGJ-1\">>\n\n!! 传送点\n\n* [[Sitsum Shrine]]\n* [[Momosik Shrine]]\n\n!! POI\n\n* [[章鱼哥]]","tags":"地点 Surface","modified":"20230526150140215","title":"Death Mountain"},
 {"created":"20230526141738328","title":"Depths","color":"#000000","modified":"20230526141738516"},
 {"created":"20230520113323960","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[生物]]\n\n!! 出发点\n\n\u003C\u003Clist-links \"[all[current]backlinks[]] +[tag[地点]]\">>\n","tags":"生物 Dragon","modified":"20230526142333637","title":"Dinraal, the Fire Dragon"},
 {"created":"20230526142421909","text":"优先打爪子素材\n\n可获得素材\n\n* 岩石，属性材料。[[Light Dragon]] 的效果是[[吸血]]。\n* 角\n* 鳞\n* 爪\n\n每次刷新角，鳞，爪三选一。\n","title":"Dragon","modified":"20230526142616993"},
@@ -666,9 +673,8 @@ Error message and password prompt
 {"created":"20230525172454860","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[武器余料建造]]\n\n[[左纳乌武器]]\n","tags":"武器余料建造","modified":"20230526142258511","title":"刚剑柄+上级魔像3钻头"},
 {"created":"20230526092417264","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[地点]]\n\n!! POI\n\n* 3條[[光亮霍拉魚]]，或是3個[[光亮蘑菇]]，或3條[[冰冷鱒魚]]跟他兌換10隻[[木箭]]","tags":"地点 Tip","modified":"20230526141950172","title":"利特村"},
 {"created":"20230525164716484","text":"湿身威力增加","tags":"","title":"卓拉武器","modified":"20230525165654013"},
-{"created":"20230526092557979","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[地点]]\n\n!! POI\n\n* 下雨天附近很多[[精力螃蟹]]，可以跟商店老板换宝石卖[[卢比]]。","tags":"地点 Tip","modified":"20230526144956326","title":"卓拉领地"},
+{"created":"20230526092557979","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[地点]]\n\n!! POI\n\n* 下雨天附近很多[[精力螃蟹]]，可以跟商店老闆換寶石。","tags":"地点 卢比 Tip","modified":"20230526141959145","title":"卓拉领地"},
 {"created":"20230525170338081","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[地点]]\n\n\u003C\u003C.figma \"https://www.figma.com/file/wsk1tyIypyKVh1JRevscio/Zelda---Tears-of-the-Kingdom?type=design&node-id=126%3A523&t=Wpm6mjcU1gBRLdax-1\">>\n\n!! POI\n\n* 西北方向 无属性[[蜥蜴战士]]巢穴\n","tags":"地点","modified":"20230525170457292","title":"卡卡利科村"},
-{"created":"20230526144843107","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[素材]]\n\n!! 进货点\n\n\u003C\u003Clist-links \"[all[current]backlinks[]] +[tag[地点]]\">>\n","tags":"素材","modified":"20230526144908793","title":"卢比"},
 {"created":"20230526144433268","text":"* 武器双手、单手、枪的类型固定，品牌随机\n* 血月刷新，人在地底时一定不会触发血月","tags":"Tip Depths","title":"地底武器刷新","modified":"20230526144745530"},
 {"created":"20230520064224697","text":"\u003C\u003C.children>>\n\n\u003C\u003C.newButton>>","tags":"Database","title":"地点","modified":"20230520104729787"},
 {"created":"20230525161728444","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[余料]]\n\n!! 进货点\n\n\u003C\u003Clist-links \"[all[current]backlinks[]] +[tag[地点]]\">>\n","tags":"余料","modified":"20230525161823382","title":"大刺球"},
@@ -701,6 +707,7 @@ Error message and password prompt
 {"created":"20230525164630006","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[武器余料建造]]\n\n[[王族武器]] + [[Lynel]] 刃角","tags":"武器余料建造","modified":"20230525164656740","title":"王族武器+人马刃角"},
 {"created":"20230520110441315","text":"\u003C\u003Clist-links \"[tag{!!title}sort[title]]\">>\n\n\u003C\u003C.newButton>>","tags":"Database","title":"生物","modified":"20230520110450553"},
 {"created":"20230525172955818","text":"扔电流果进去电鱼","tags":"Tip","title":"电鱼","modified":"20230525173017009"},
+{"created":"20230526150020420","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[生物]]\n\n!! 特殊功能\n\n* [[装备附魔]]\n* [[装备维修]]\n\n!! 刷新点\n\n\u003C\u003Clist-links \"[all[current]backlinks[]] +[tag[地点]]\">>\n","tags":"生物","modified":"20230526150058237","title":"章鱼哥"},
 {"created":"20230525160707857","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[武器]]\n\n砍树\n","tags":"武器","modified":"20230525161918418","title":"粗粗的棒子"},
 {"created":"20230525160411058","text":"[[粗粗的棒子]] + [[大刺球]]\n\n","tags":"武器余料建造","modified":"20230525165119224","title":"粗粗的棒子+大刺球"},
 {"created":"20230520110332837","text":"\u003C\u003Clist-links \"[tag{!!title}sort[title]]\">>\n\n\u003C\u003C.newButton>>","tags":"Database","title":"素材","modified":"20230520110341726"},
@@ -710,6 +717,8 @@ Error message and password prompt
 {"created":"20230524161043613","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[素材]]\n\n初始台地 [img[https://blog.iany.me/uploads/202305/uv6O8Y/kADpwx.png]]\n\n库坦池塘附近\n\n!! 进货点\n\n\u003C\u003Clist-links \"[all[current]backlinks[]] +[tag[地点]]\">>\n","tags":"素材","modified":"20230526091143676","title":"蜂蜜"},
 {"created":"20230525163821378","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[生物]]\n\n!! 刷新点\n\n\u003C\u003Clist-links \"[all[current]backlinks[]] +[tag[地点]]\">>\n","tags":"生物 属性材料","modified":"20230525172328000","title":"蜥蜴战士"},
 {"created":"20230526143104852","text":"!! 当前使用路线\n\n\u003C\u003Clist-links \"[tag[血月路线]] +[tag[Active]] +[sort[]]\">>\n\n---\n\n全部路线查看 {{血月路线||$:/core/ui/TagTemplate}}","tags":"","title":"血月路线","modified":"20230526143845316"},
+{"created":"20230526150322948","text":"让 [[Death Mountain]] 的 [[章鱼哥]] 吞下武器和盾牌会维护成全新的。\n\n章鱼哥不吞[[英杰武器]]，但是可以把 [[英杰武器]] 通过余料建造附在其它武器上。","title":"装备维修","modified":"20230526150525567","tags":"Tip 血月路线 Active"},
+{"created":"20230526150207035","text":"让 [[Death Mountain]] 的 [[章鱼哥]] 吞下武器可以刷新附魔词条。\n\n* 攻击最高 +10","title":"装备附魔","modified":"20230526150320221","tags":"Tip"},
 {"created":"20230525163245757","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[武器]]\n\n[[近卫武器]]\n\n!! 进货点\n\n\u003C\u003Clist-links \"[all[current]backlinks[]] +[tag[地点]]\">>\n","tags":"武器 近卫武器","modified":"20230525163441216","title":"近卫大剑"},
 {"created":"20230525162321299","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[武器余料建造]]\n\n[[近卫大剑]] + [[Lynel]] 刃角\n","tags":"武器余料建造","modified":"20230525162524905","title":"近卫大剑+人马刃角"},
 {"created":"20230525163341144","text":"濒临损坏时威力增加。\n\n跳斩砍地板先把耐久砍到只剩一点，就可以同时触发近卫红温翻倍和武器最后一击暴击的加成。在提示快坏掉的时候再挥两下。\n\n---\n\n\u003C\u003C.children>>","title":"近卫武器","modified":"20230525172431860"},
